<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/orange">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgFP"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/splash"/>

    <TextView
        android:id="@+id/tvFP"
        android:layout_below="@id/imgFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <EditText
        android:id="@+id/etFPMobile"
        android:layout_below="@+id/tvFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:inputType="phone"
        android:padding="3dp"
        android:background="@color/white"
        />

    <EditText
        android:id="@+id/etFPEmail"
        android:layout_below="@+id/etFPMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/btnFPNext"
        android:layout_below="@id/etFPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/dark_orange"/>


</RelativeLayout>