<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skin_yellow">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/register_yourself"
        android:layout_marginStart="50dp"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"/>

    
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/person"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_min_3_character"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:padding="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_below="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:src="@drawable/email"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:padding="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_below="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/phone"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/enter_number"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:padding="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_below="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/location"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/delivery_addres"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:padding="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_below="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/lock"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_min"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:padding="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll6"
        android:layout_below="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/tv_circular"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/lock"/>
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_cnfrm"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:padding="3dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll6"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/cyan" />



</RelativeLayout>