<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/skin_yellow">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/splash"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imgLogin"
        android:background="@drawable/tv_circular"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/phone"
            android:layout_margin="4dp"
            android:padding="1dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll1"
        android:background="@drawable/tv_circular"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/lock"
            android:layout_margin="4dp"
            android:padding="1dp"/>

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/ll2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/cyan"/>

    <TextView
        android:id="@+id/tvForgotPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_below="@id/btnLogin"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>